# bigint-napi-example

./: .gitignore  CMakeLists.txt  index.js  package-lock.json  package.json
cppsrc/: bigintexample.cpp  bigintexample.h  main.cpp
